[package]
name = "did-webplus-core"
version = "0.5.0"
authors = [
    "Victor Dods <victor.dods@ledgerdomain.com>",
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
]
edition = "2024"

[features]
clap = ["dep:clap"]
ed25519-dalek = [
    "did-webplus-jws/ed25519-dalek",
    "dep:ed25519-dalek",
    "signature-dyn/ed25519-dalek",
]
ed448-goldilocks = [
    "did-webplus-jws/ed448-goldilocks",
    "dep:ed448-goldilocks",
    "signature-dyn/ed448-goldilocks",
]
k256 = ["did-webplus-jws/k256", "dep:k256", "signature-dyn/k256"]
p256 = ["did-webplus-jws/p256", "dep:p256", "signature-dyn/p256"]
p384 = ["did-webplus-jws/p384", "dep:p384", "signature-dyn/p384"]
p521 = ["did-webplus-jws/p521", "dep:p521", "signature-dyn/p521"]

[dependencies]
base64 = { version = "0.21.4", default-features = false }
clap = { version = "4.5.4", optional = true, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
did-webplus-jws = { path = "../jws", features = ["mbx"] }
ed25519-dalek = { workspace = true, optional = true }
ed448-goldilocks = { workspace = true, optional = true }
enum-map = "2.7.3"
flagset = "0.4.6"
k256 = { workspace = true, optional = true }
mbx = { workspace = true, features = [
    "ed25519-dalek",
    "ed448-goldilocks",
    "k256",
    "p256",
    "p384",
    "p521",
    "serde",
    "signature-dyn",
] }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
p521 = { workspace = true, optional = true, features = ["ecdsa"] }
pneutype = { workspace = true }
selfhash = { workspace = true, features = [
    "all-hash-functions",
    "jcs",
    "mbx",
    "serde",
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json_canonicalizer = "0.3.0"
serde_json = "1.0.107"
serde_with = { version = "3.3.0", default-features = false, features = [
    "macros",
] }
signature-dyn = { workspace = true, features = ["ssi-multicodec"] }
ssi-multicodec = "0.2.0"
thiserror = { version = "1.0.60", default-features = false }
time = { version = "0.3", features = [
    "formatting",
    "macros",
    "serde",
    "serde-well-known",
] }
tracing = "0.1.37"
verifier-resolver = { path = "../../verifier-resolver" }

[dev-dependencies]
ctor = "0.4.1"
did-key = { path = "../../did-key", features = [
    "ed25519-dalek",
    "verifier-resolver",
] }
did-webplus-jws = { path = "../jws", features = ["ed25519-dalek"] }
ed25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
mbx = { workspace = true, features = ["codec-str"] }
rand = { version = "0.8", features = ["std_rng"] }
serde_json = { version = "1", default-features = false }
serial_test = { version = "2", default-features = false }
signature = { workspace = true }
signature-dyn = { workspace = true, features = ["random"] }
ssi-jwk = { version = "0.3.2", features = [
    "ed25519",
    "secp256k1",
    "secp256r1",
    "secp384r1",
] }
ssi-jws = { version = "0.3.1", features = ["ed25519"] }
test-util = { path = "../../test-util" }
url = "2.5.4"

# # NOTE: These are for the test_ssi_jwk_interop_* tests, which have passed, and don't need to be continually run.

# # ssi-jwk crate uses ed25519-dalek 2.2.
# ed25519_dalek_2_2 = { package = "ed25519-dalek", version = "2.2" }
# # ssi-jwk crate uses k256 0.13.
# k256_0_13 = { package = "k256", version = "0.13" }
# # ssi-jwk crate uses p256 0.13.
# p256_0_13 = { package = "p256", version = "0.13" }
# # ssi-jwk crate uses p384 0.13.
# p384_0_13 = { package = "p384", version = "0.13" }
