[package]
name = "did-webplus-doc-storage-mock"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

[dependencies]
async-trait = "0.1.80"
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store" }
mbx = "0.1.1"
selfhash = "0.5.1"
storage-traits = { path = "../../storage-traits" }
time = "0.3"
