[package]
name = "did-webplus-doc-storage-mock"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

[dependencies]
async-trait = { workspace = true }
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store" }
mbx = { workspace = true }
selfhash = { workspace = true }
storage-traits = { path = "../../storage-traits" }
time = "0.3"
