[package]
name = "did-webplus-doc-storage-postgres"
version = "0.1.0"
authors = [
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
    "Victor Dods <victor.dods@ledgerdomain.com>",
]
edition = "2021"

[dependencies]
async-trait = "0.1.80"
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store", features = ["sqlx"] }
mbc = { path = "../../../mbc" }
selfhash = "0.4.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
storage-traits = { path = "../../storage-traits", features = ["sqlx-postgres"] }
