[package]
name = "did-webplus-doc-storage-sqlite"
version = "0.1.0"
authors = [
    "Ben Nichols <ben.nichols@ledgerdomain.com>",
    "Victor Dods <victor.dods@ledgerdomain.com>",
]
edition = "2024"

[dependencies]
async-trait = "0.1.80"
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store", features = ["sqlx"] }
mbx = "0.1.0"
selfhash = "0.5.0"
sqlx = { version = "0.8.2", features = ["sqlite", "time"] }
storage-traits = { path = "../../storage-traits", features = ["sqlx-sqlite"] }
time = "0.3"
