[package]
name = "did-webplus-doc-store"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
anyhow = "1.0.94"
async-trait = { workspace = true }
did-webplus-core = { path = "../core" }
mbx = { workspace = true }
selfhash = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.107"
serde_json_canonicalizer = "0.3.0"
sqlx = { version = "0.8.2", default-features = false, optional = true }
storage-traits = { path = "../../storage-traits" }
thiserror = "1.0.60"
time = { version = "0.3", features = ["serde"] }
tracing = "0.1.37"

# NOTE: This is used for parallel validation of DID documents, and really speeds things up
# when there are many DID updates to be validated. TODO: maybe put this behind a feature flag
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12"
tokio = { version = "1.41", features = ["rt-multi-thread"] }

[dev-dependencies]
ctor = "0.4.1"
did-webplus-doc-storage-mock = { path = "../doc-storage-mock" }
did-webplus-doc-storage-postgres = { path = "../doc-storage-postgres" }
did-webplus-doc-storage-sqlite = { path = "../doc-storage-sqlite" }
did-webplus-mock = { path = "../mock" }
mbx = { workspace = true }
selfhash = { workspace = true }
serial_test = { version = "2", default-features = false }
signature-dyn = { workspace = true, features = ["ed25519-dalek", "random"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
storage-traits = { path = "../../storage-traits" }
test-util = { path = "../../test-util" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
