[package]
name = "did-webplus-jws"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[features]
clap = ["dep:clap"]
ed25519-dalek = ["dep:ed25519-dalek"]
wasm-bindgen = ["dep:wasm-bindgen"]
k256 = ["dep:k256"]
mbc = ["dep:mbc", "dep:ssi-multicodec"]
p256 = ["dep:p256"]

[dependencies]
base64 = { version = "0.21.4" }
clap = { version = "4.5.4", optional = true, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
ed25519-dalek = { version = "2.2.0", optional = true }
k256 = { version = "0.13.1", optional = true }
mbc = { path = "../../../mbc", optional = true }
p256 = { version = "0.13.2", optional = true }
selfsign = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
signature = { version = "2.2.0", features = ["alloc"] }
ssi-multicodec = { version = "0.2.0", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }

[dev-dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
