[package]
name = "did-webplus-jws"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

[features]
clap = ["dep:clap"]
ed25519-dalek = ["dep:ed25519-dalek"]
ed448-goldilocks = ["dep:ed448-goldilocks"]
wasm-bindgen = ["dep:wasm-bindgen"]
k256 = ["dep:k256"]
mbx = ["dep:mbx", "dep:ssi-multicodec"]
p256 = ["dep:p256"]
p384 = ["dep:p384"]
p521 = ["dep:p521"]

[dependencies]
base64 = { version = "0.21.4" }
clap = { version = "4.5.4", optional = true, features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
ed25519-dalek = { workspace = true, optional = true }
ed448-goldilocks = { workspace = true, optional = true }
k256 = { workspace = true, optional = true }
mbx = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
p384 = { workspace = true, optional = true }
p521 = { workspace = true, optional = true, features = ["ecdsa"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
signature-dyn = { workspace = true, features = ["async", "ssi-multicodec"] }
ssi-multicodec = { version = "0.2.0", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }

[dev-dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = "0.8"
rand_0_9 = { package = "rand", version = "0.9.2", features = ["os_rng"] }
signature-dyn = { workspace = true, features = [
    "async",
    "ed25519-dalek",
    "ed448-goldilocks",
    "k256",
    "p256",
    "p384",
    "p521",
] }
