[package]
name = "did-webplus-mock"
version = "0.2.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2021"

[dependencies]
derive_more = { version = "0.99.17", default-features = false, features = [
    "deref",
    "display",
    "from",
    "into",
] }
did-webplus-core = { path = "../core", features = ["ed25519-dalek"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
log = "0.4.21"
mbc = { path = "../../../mbc", features = ["ed25519-dalek"] }
rand = "0.8"
selfhash = "0.4.0"
selfsign = "0.6.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3.3.0", default-features = false, features = [
    "macros",
] }
thiserror = { version = "1.0.60", default-features = false }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }

[dev-dependencies]
ctor = "0.4.1"
did-webplus-jws = { path = "../jws" }
env_logger = "0.11.3"
serde_json = { version = "1", default-features = false }
serial_test = { version = "2", default-features = false }
# This is probably temporary.
ssi-jwk = { version = "0.1.1", default-features = false, features = [
    "ed25519",
] }
# This is probably temporary.
ssi-jws = { version = "0.1.0", default-features = false, features = [
    "ed25519",
] }
