[package]
name = "did-webplus-software-wallet"
version = "0.1.0"
authors = ["Victor Dods <victor.dods@ledgerdomain.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
blake3 = "1.8.2"
did-webplus-core = { path = "../core" }
did-webplus-doc-store = { path = "../doc-store" }
did-webplus-resolver = { path = "../resolver" }
did-webplus-wallet = { path = "../wallet" }
did-webplus-wallet-store = { path = "../wallet-store" }
# TEMP: probably abstract behind signature-dyn
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
enum-map = "2.7.3"
lazy_static = "1.4.0"
mbx = { version = "0.1.1", features = ["blake3"] }
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json"] }
selfhash = "0.5.1"
serde_json = "1.0.107"
signature-dyn = "0.1.0"
storage-traits = { path = "../../storage-traits" }
time = "0.3"
# TEMP HACK MAYBE
tracing = "0.1.37"
url = "2.5.4"
uuid = "1.9.1"

[dev-dependencies]
ctor = "0.4.1"
did-webplus-vdr-lib = { path = "../vdr-lib", features = ["postgres"] }
did-webplus-wallet-storage-mock = { path = "../wallet-storage-mock" }
did-webplus-wallet-storage-sqlite = { path = "../wallet-storage-sqlite" }
dotenvy = "0.15.7"
serial_test = { version = "2", default-features = false }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
test-util = { path = "../../test-util" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.9.1", features = ["v4"] }
